--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-minimal
+title: Abdul Rahman Yusmadi
+description: Curriculum vitae on GitHub Pages
+logo: https://avatars1.githubusercontent.com/u/57968900
